@@ -16,3 +16,10 @@ com.openexchange.soap.cxf.hideServiceListPage=false
 #
 # Default value is 128000
 com.openexchange.soap.cxf.entityExpansionLimit=128000
+
+# This is a workaround for the known side-effect in CXF 2.7.x described in CXF-5737 issue (https://issues.apache.org/jira/browse/CXF-5737)
+# The endpoint address gets manipulating after accessing it via multiple aliases.
+# This is disabled by default in the upcoming versions of CXF.
+#
+# Default value is true
+com.openexchange.soap.cxf.disableAddressUpdates=true
